--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,4 @@
-title: Your Site Title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write your site description here.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: yourusername
-github_username:  yourusername
+title: Your Name
+description: "This is my personal website created with Jekyll."
+baseurl: ""
+url: "http://RahulRamakrish.github.io" # Change `username` to your GitHub username.
