--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: Your Name
 description: "This is my personal website created with Jekyll."
 baseurl: ""
 url: "http://RahulRamakrish.github.io" # Change `username` to your GitHub username.
+theme: minima
