--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ title: Your Name
 description: "This is my personal website created with Jekyll."
 baseurl: ""
 url: "http://RahulRamakrish.github.io" # Change `username` to your GitHub username.
+
+
+email: thedevslot@gmail.com
