--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ baseurl: ""
 url: "http://RahulRamakrish.github.io" # Change `username` to your GitHub username.
 
 
-email: thedevslot@gmail.com
+email: myemail@gmail.com
