--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ url: "http://RahulRamakrish.github.io" # Change `username` to your GitHub userna
 
 
 email: myemail@gmail.com
+theme:jekyll-theme-modernist
