--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Rahul Ramakrishnan
 Home_title: Rahul Ramakrishnan
-Home_body: Hello and Welcome!
+Home_body: Rahul Ramakrishnan
+Hi and Welcome!
