--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rahul Ramakrishnan
 description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: True
+show_downloads: False
 google_analytics:
 theme: jekyll-theme-cayman
