--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Rahul Ramakrishnan
 email:              your-email@example.com
-description:        Welcome to where creativity sparks and code comes to life.
+description:        
 author:             Start Bootstrap
 baseurl:            
 url:                "https://github.com/RahulRamakrish/RahulRamakrish.github.io"
