--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ baseurl:
 url:                "https://github.com/RahulRamakrish/RahulRamakrish.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+# twitter_username:   SBootstrap
+github_username:    https://github.com/RahulRamakrish
+# facebook_username:  StartBootstrap
 instagram_username:  
-linkedin_username:
+linkedin_username: www.linkedin.com/in/rahulramakrish
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
