--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ url:                "https://github.com/RahulRamakrish/RahulRamakrish.github.io"
 
 # Social Profiles
 # twitter_username:   SBootstrap
-github_username:    https://github.com/RahulRamakrish
+github_username:    RahulRamakrish
 # facebook_username:  StartBootstrap
 instagram_username:  
-linkedin_username: www.linkedin.com/in/rahulramakrish
+linkedin_username: rahulramakrish
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
