--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              Rahul Ramakrishnan
-email:              your-email@example.com
+email:              rahul65995@gmail.com
 description:        
 author:             Start Bootstrap
 baseurl:            
