--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Rahul Ramakrishnan
 email:              rahul65995@gmail.com
 description:        
-author:             Start Bootstrap
+author:             Rahul Ramakrishnan
 baseurl:            
 url:                "https://github.com/RahulRamakrish/RahulRamakrish.github.io"
 
